force-app/main/default/objects/Giganet_Product__c/Giganet_Product__c.object-meta.xml
<CustomObject>
    <label>Giganet Product</label>
    <nameField>
        <label>Giganet Product  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Giganet Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>