force-app/main/default/objects/Giganet_Product__c/fields/Install_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Install_Gross_Profit__c</fullName>
    <label>Install Gross Profit</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>