force-app/main/default/objects/Giganet_Product__c/fields/Monthly_Contract_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contract_Revenue__c</fullName>
    <label>Monthly Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>