force-app/main/default/objects/Giganet_Product__c/fields/Router__c.field-meta.xml
<CustomField>
    <fullName>Router__c</fullName>
    <label>Router</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Juniper SRX300</fullName>
            </value>
            <value>
                <fullName>Juniper EX2300-C-12T</fullName>
            </value>
            <value>
                <fullName>Juniper SRX340</fullName>
            </value>
            <value>
                <fullName>Juniper EX4300-24T 10GE</fullName>
            </value>
            <value>
                <fullName>UltraHub 1</fullName>
            </value>
            <value>
                <fullName>UltraHub 2</fullName>
            </value>
            <value>
                <fullName>UltraHub 3</fullName>
            </value>
            <value>
                <fullName>SuperHub 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>