force-app/main/default/objects/Giganet_Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTTP</fullName>
            </value>
            <value>
                <fullName>FTTC</fullName>
            </value>
            <value>
                <fullName>ADSL</fullName>
            </value>
            <value>
                <fullName>LEASEDLINE</fullName>
                <label>Ethernet</label>
            </value>
            <value>
                <fullName>Hosted</fullName>
            </value>
            <value>
                <fullName>Handset</fullName>
            </value>
            <value>
                <fullName>Bolt-On</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Number Porting</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Access Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>