force-app/main/default/objects/Giganet_Product__c/recordTypes/Bolt_On_s_and_Professional_Services.recordType-meta.xml
<RecordType>
    <fullName>Bolt_On_s_and_Professional_Services</fullName>
    <active>true</active>
    <label>Handsets, Bolt On&apos;s and Professional Services</label>
</RecordType>