force-app/main/default/objects/Giganet_Product__c/recordTypes/Giganet_Connect.recordType-meta.xml
<RecordType>
    <fullName>Giganet_Connect</fullName>
    <active>true</active>
    <label>Giganet Connect</label>
</RecordType>