force-app/main/default/objects/Giganet_Product__c/recordTypes/Giganet_Internet.recordType-meta.xml
<RecordType>
    <fullName>Giganet_Internet</fullName>
    <active>true</active>
    <label>Giganet Internet</label>
</RecordType>