force-app/main/default/objects/Giganet_Product__c/recordTypes/Internet_Extras.recordType-meta.xml
<RecordType>
    <fullName>Internet_Extras</fullName>
    <active>true</active>
    <label>Internet Extras</label>
</RecordType>